--- a/src/components/menu.module.css
+++ b/src/components/menu.module.css
@@ -3,7 +3,8 @@
     background-color: #f2f2f2; 
     margin: 0;
     padding: 0.7em; 
-    overflow: scroll;  
+    overflow-x: scroll;
+    overflow-y: hidden;
 } 
 
 .menu > ul {
@@ -29,7 +30,8 @@
     background-color: #fafafa; 
     margin: 0;
     padding: 0.7em; 
-    overflow: scroll;  
+    overflow-x: scroll;
+    overflow-y: hidden;
     border-bottom: 1px solid #f0f0f0;
 } 
 
